@@ -1,5 +1,5 @@
 /*
- * $Id: wpause.c,v 1.33 2016/05/07 12:13:03 markisch Exp $
+ * $Id: wpause.c,v 1.34 2016/05/18 08:13:02 markisch Exp $
  */
 
 /* GNUPLOT - win/wpause.c */
@@ -195,6 +195,7 @@ PauseBox(LPPW lppw)
     int width, height;
     TEXTMETRIC tm;
     RECT rect;
+    SIZE size;
 
 #ifdef USE_MOUSE
     /* Do not try to wait for mouse events when there's no graph window open. */
@@ -213,11 +214,13 @@ PauseBox(LPPW lppw)
 	    lppw->Origin.y = (rect.bottom + rect.top) / 2;
 
 	hdc = GetDC(NULL);
-	SelectObject(hdc, GetStockObject(SYSTEM_FONT));
+	SelectObject(hdc, GetStockObject(DEFAULT_GUI_FONT));
+	/* determine actual text size */
+	GetTextExtentPoint32W(hdc, lppw->Message, wcslen(lppw->Message), &size);
 	GetTextMetrics(hdc, &tm);
-	width = max(24, 4 + wcslen(lppw->Message)) * tm.tmAveCharWidth;
+	width = max(28 * tm.tmAveCharWidth, size.cx + 6 * tm.tmAveCharWidth);
 	width = min(width, rect.right - rect.left);
-	height = 28 * (tm.tmHeight + tm.tmExternalLeading) / 4;
+	height = 8 * size.cy;
 	ReleaseDC(NULL,hdc);
 
 	lppw->hWndPause = CreateWindowExW(
@@ -289,6 +292,7 @@ WndPauseProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 	TEXTMETRIC tm;
 	LPPW lppw;
 	int cxChar, cyChar, middle;
+	HFONT hfont;
 
 	lppw = (LPPW)GetWindowLongPtrW(hwnd, 0);
 
@@ -311,7 +315,7 @@ WndPauseProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 			return 0;
 		case WM_PAINT: {
 			hdc = BeginPaint(hwnd, &ps);
-			SelectObject(hdc, GetStockObject(SYSTEM_FONT));
+			SelectObject(hdc, GetStockObject(DEFAULT_GUI_FONT));
 			SetTextAlign(hdc, TA_CENTER);
 			GetClientRect(hwnd, &rect);
 			SetBkMode(hdc,TRANSPARENT);
@@ -331,7 +335,8 @@ WndPauseProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 			SetWindowLongPtrW(hwnd, 0, (LONG_PTR)lppw);
 			lppw->hWndPause = hwnd;
 			hdc = GetDC(hwnd);
-			SelectObject(hdc, GetStockObject(SYSTEM_FONT));
+			hfont = (HFONT) GetStockObject(DEFAULT_GUI_FONT);
+			SelectObject(hdc, hfont);
 			GetTextMetrics(hdc, &tm);
 			cxChar = tm.tmAveCharWidth;
 			cyChar = tm.tmHeight + tm.tmExternalLeading;
@@ -339,21 +344,23 @@ WndPauseProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 			middle = ((LPCREATESTRUCT) lParam)->cx / 2;
 			lppw->hOK = CreateWindow(TEXT("button"), TEXT("OK"),
 					ws_opts | BS_DEFPUSHBUTTON,
-					middle - 10 * cxChar, 3 * cyChar,
-					8 * cxChar, 7 * cyChar / 4,
+					middle - 13 * cxChar, 3 * cyChar,
+					10 * cxChar, 7 * cyChar / 4,
 					hwnd, (HMENU)IDOK,
 					((LPCREATESTRUCT) lParam)->hInstance, NULL);
 			lppw->bDefOK = TRUE;
 			lppw->hCancel = CreateWindow(TEXT("button"), TEXT("Cancel"),
 					ws_opts | BS_PUSHBUTTON,
-					middle + 2 * cxChar, 3 * cyChar,
-					8 * cxChar, 7 * cyChar / 4,
+					middle - 1 * cxChar, 3 * cyChar,
+					10 * cxChar, 7 * cyChar / 4,
 					hwnd, (HMENU)IDCANCEL,
 					((LPCREATESTRUCT) lParam)->hInstance, NULL);
 			lppw->lpfnOK = (WNDPROC) GetWindowLongPtr(lppw->hOK, GWLP_WNDPROC);
 			SetWindowLongPtr(lppw->hOK, GWLP_WNDPROC, (LONG_PTR)PauseButtonProc);
 			lppw->lpfnCancel = (WNDPROC) GetWindowLongPtr(lppw->hCancel, GWLP_WNDPROC);
 			SetWindowLongPtr(lppw->hCancel, GWLP_WNDPROC, (LONG_PTR)PauseButtonProc);
+			SendMessage(lppw->hOK, WM_SETFONT, (WPARAM)hfont, 0);
+			SendMessage(lppw->hCancel, WM_SETFONT, (WPARAM)hfont, 0);
 			if (GetParent(hwnd))
 				EnableWindow(GetParent(hwnd), FALSE);
 			return 0;
